--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "backup": "^1.1.0",
     "discord": "^0.8.2",
     "discord-anti-spam": "^2.2.2",
+    "discord.js": "^11.5.1",
+    "fs": "0.0.1-security",
     "sql": "^0.78.0"
   }
 }
