--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "discord-anti-spam": "^2.2.2",
     "discord.js": "^11.5.1",
     "fs": "0.0.1-security",
-    "sql": "^0.78.0"
+    "sql": "^0.78.0",
+    "ms": "^2.1.2"
   }
 }
