--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "prefix" : "/",
-    "token" : "NjU5MDYzMTgxMzg1MTM4MTc2.XiB53g.9SXozhb0W0HG7JGB6nSlFkTjxfI"
+    "prefix" : "/"
+    
    
 }
